# automated-api-testing

./: LICENSE  README.md
.github/workflows/: ci.yaml
service-virtualization/: Dockerfile  README.md
service-virtualization/templates/: imposters.ejs  microchips.ejs  source-of-main-system.ejs  source.ejs
service-virtualization/templates/prod/: main-system.ejs  microchips.ejs  source-of-main-system.ejs
testing/: pyproject.toml
testing/tests/: test_intake.tavern.yaml  test_intake_dynamic.tavern.yaml  text_intake.tavern.yaml  utils.py
testing/tests/resources/intake/: microchip_db.json  source.json
testing/tests/resources/intake/dynamic-checking/: microchip_db.json  source.json
testing/tests/resources/intake/static-checking/: embed-xml.yaml  microchip_db.json
