[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Rob Ratcliffe <rlr@tcliffe.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.2"
tavern = "^2.3.0"
tavalidate = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
